@@ -89,6 +89,7 @@ graphics/greenWatercolorHeader.tga \
 graphics/redWatercolorHeader.tga \
 graphics/guessMarkerRow.tga \
 graphics/guessMarkerColumn.tga \
+graphics/amuletIcon.tga \
 
 
 
